--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -18,60 +18,62 @@
     </div>
     <br>
     <br>
-    <div class="button pb-32">
+    <div class="flex justify-center pb-32">
       <button class="rounded-lg border-2 border-yellow-400 hover:bg-yellow-400 text-yellow-400 font-bold py-2 px-4 rounded text-2xl" id="begin">Commencer</button>
     </div>
   </div>
 
   <!-- reste à implémenter la boucle et les conditions pour la couleur
     des tuiles ainsi que le nombre d'étoiles -->
-  <div class='container mx-auto py-8'>
+  <div class='container mx-auto py-8 bg-gray-300'>
     <div class="text-center font-bold text-2xl text-gray-800 py-4">
       <h2>Derniers quiz crées</h2>
     </div>
-    <lu>
-      {% for quiz in quizzes %}
-      <li>{{ quiz.title }}</li>
-      {% endfor %}
-    </lu>
-    <div class="flex flex-wrap">
-      <div class="w-full lg:w-1/3 p-2">
-        <div class="bg-blue-400 p-2 h-40 rounded-lg">
-          <div class="text-gray-700 text-center truncate">Titre du dernier quiz créé
-          </div>
-          <div class="flex pt-16 justify-center">
-            <img class="px-1 pb-1" src="../../static/core/img/etoile.png" alt="etoile">
-            <img class="px-1 pb-1" src="../../static/core/img/etoile.png" alt="etoile">
-            <img class="px-1 pb-1" src="../../static/core/img/etoile.png" alt="etoile">
-          </div>
+
+    <div class="flex content-start flex-wrap pb-16">
+    {% for quiz in quiz_list %}
+      <div class="w-1/3 p-2">
+          <div class="{{ quiz.category }} p-2 h-40 rounded-lg">
+            <a href="#">
+              <div class="text-gray-700 text-center truncate">
+                {{ quiz.title }}
+              </div>
+              <div class="flex h-24 justify-center items-end mt-4">
+                {% if quiz.difficulty == 1 %}
+                  <img src="{% static "core/img/etoile.png" %}" alt="etoile" class="px-1">
+                {% elif quiz.difficulty == 2 %}
+                  <img src="{% static "core/img/etoile.png" %}" alt="etoile" class="px-1">
+                  <img src="{% static "core/img/etoile.png" %}" alt="etoile" class="px-1">
+                {% else %}
+                  <img src="{% static "core/img/etoile.png" %}" alt="etoile" class="px-1">
+                  <img src="{% static "core/img/etoile.png" %}" alt="etoile" class="px-1">
+                  <img src="{% static "core/img/etoile.png" %}" alt="etoile" class="px-1">
+                {% endif %}
+              </div>
+            </a>
         </div>
       </div>
-      <div class="w-full lg:w-1/3 p-2">
-        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">Titre du pénultième quiz créé</div>
-      </div>
-      <div class="w-full lg:w-1/3 p-2">
-        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">Ceci est le titre de l'anté-pénultième quiz créé, il est particulièrement long</div>
-      </div>
-      <div class="w-full lg:w-1/3 p-2">
-        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">Ce titre-ci est court</div>
-      </div>
-      <div class="w-full lg:w-1/3 p-2">
-        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">Et ce dernier titre de quiz est particulièrement long</div>
-      </div>
+    {% endfor %}
+    <div class="w-1/3 p-2 flex justify-center items-center ">
+      <a href="{% url 'quiz-list' %}">
+        <button class="text-lg font-bold" id="seequiz">Voir les quiz</button>
+      </a>
     </div>
+  </div>
+
   </div>
 
   <div class="explanations py-4">
     <div class="container mx-auto text-center pb-16">
-  	 <h3 class="font-bold p-8">Explications</h3>
+  	 <h3 class="text-center font-bold text-2xl text-gray-800 py-4">Explications</h3>
      <p class="py-8">
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
       </p>
-    <div class="flex justify-evenly -mx-16 px-8">
-    <button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8">Créer un quiz</button>
-    <button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8 ">Voir les catégories</button>
-  </div>
-  </div>
+      <div class="flex justify-evenly -mx-16 px-8">
+        <button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8">Créer un quiz</button>
+        <button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8 ">Voir les catégories</button>
+      </div>
+    </div>
   </div>
 
 {% endblock %}
