--- a/quiz/templates/quiz/quiz_list.html
+++ b/quiz/templates/quiz/quiz_list.html
@@ -1,34 +1,42 @@
-{% extends "core/base.html" %}
+{% extends 'core/base.html' %}
 {% load static %}
 
 {% block title %}Liste des quiz{% endblock %}
+{% block css %}
+  <link rel="stylesheet" href="{% static 'quiz/quiz_list.css' %}">
+{% endblock %}
 
 {% block content %}
 <div class="container mx-auto">
-	<h1 class="py-4 text-2xl">Liste des quiz créés du plus récent au plus ancien :</h1>
-	{% for quiz in object_list %}
-	<div class="flex content-start flex-wrap bg-gray-200">
-		<div class="w-1/3 p-2">
-			<div class="bg-blue-300 p-2 h-40 rounded-lg">
-				<div class="text-gray-700 text-center truncate">
-					<a href="{% url 'take_quiz' quiz.url %}">{{ quiz.title }}</a>
-				</div>
-				<div class="flex h-24 justify-center items-end">
-					{% if quiz.difficulty == 1 %}
-					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-					{% elif quiz.difficulty == 2%}
-					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-					{% elif quiz.difficulty == 3 %}
-					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-					{% endif %}
+	<h1 class="pb-4 pt-8 text-2xl text-gray-700 font-bold">Liste des quiz créés du plus récent au plus ancien :</h1>
+	<div class="flex content-start flex-wrap bg-gray-300 pb-16">
+		{% for quiz in quiz_list %}
+			<div class="w-1/3 p-2">
+					<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
+						<a href="#">
+							<div class="text-gray-700 text-center truncate">
+								{{ quiz.title }}
+							</div>
+							<div class="flex h-24 justify-center items-end mt-4">
+								{% if quiz.difficulty == 1 %}
+									<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+								{% elif quiz.difficulty == 2 %}
+									<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+									<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+								{% else %}
+									<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+									<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+									<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+								{% endif %}
+							</div>
+						</a>
 				</div>
 			</div>
-		</div>
 		{% endfor %}
 	</div>
-	<a href="{% url '' %}">Voir les catégories</a>
 </div>
+{% endblock %}
+
+{% block footer %}
+  {% include 'core/footer.html' %}
 {% endblock %}
