added link for quiz by category and quiz by subcategory

--- a/quiz/templates/quiz/create.html
+++ b/quiz/templates/quiz/create.html
@@ -21,7 +21,7 @@
       </p>
       <p>
         <label class="block text-gray-700 text-base font-bold pt-4 pl-2 text-gray-700"> {{ quiz_form.description.label }}</label>
-        <div class="shadow appearance-none border rounded lg:w-2/3 w-full py-2 px-3 text-gray-700 focus:outline-none focus:shadow-outline">{{ quiz_form.description }}</div>
+        <div class="shadow border rounded lg:w-2/3 w-full py-2 px-3 text-gray-700 focus:outline-none focus:shadow-outline">{{ quiz_form.description }}</div>
       </p>
       <p>
         <label class="block text-gray-700 text-base font-bold pt-4 pl-2 text-gray-700">{{ quiz_form.category.label }}</label>
