--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -34,7 +34,7 @@
     {% for quiz in quiz_list %}
       <div class="w-1/3 p-2">
           <div class="{{ quiz.category }} p-2 h-40 rounded-lg">
-            <a href="#">
+            <a href="{% url 'take' url=quiz.url %}">
               <div class="text-gray-700 text-center truncate">
                 {{ quiz.title }}
               </div>
