--- a/quiz/templates/quiz/quiz_list.html
+++ b/quiz/templates/quiz/quiz_list.html
@@ -7,11 +7,20 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mx-auto">
+<div class="flex min-h-screen">
+<div class="container mx-auto flex-grow bg-gray-200 px-8">
 	<h1 class="pb-4 pt-8 text-2xl text-gray-700 font-bold">Liste des quiz créés du plus récent au plus ancien :</h1>
-	<div class="flex content-start flex-wrap bg-gray-300 pb-16">
+	<button class="text-blue-400 py-4" id="show-categories">Sélectionner un quiz selon sa catégorie</button>
+	<div class="py-4" id="categories">
+		{% for cat in categories %}
+			<a href="{% url 'quiz_category_list_matching' category_name=cat.category %}">
+				<button class="{{ cat.category }} rounded py-1 px-1">{{ cat.category }}</button>
+			</a>
+		{% endfor %}
+	</div>
+	<div class="flex content-start flex-wrap pb-16">
 		{% for quiz in quiz_list %}
-			<div class="w-1/3 p-2">
+			<div class="lg:w-1/3 w-full p-2">
 					<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
 						<a href="#">
 							<div class="text-gray-700 text-center truncate">
@@ -35,6 +44,14 @@
 		{% endfor %}
 	</div>
 </div>
+</div>
+<script>
+	$("#categories").hide();
+	$("#show-categories").click( function() {
+		$("#categories").fadeIn();
+	});
+
+</script>
 {% endblock %}
 
 {% block footer %}
