--- a/quiz/templates/quiz/create.html
+++ b/quiz/templates/quiz/create.html
@@ -31,6 +31,10 @@
         <label class="block text-gray-700 text-base font-bold pt-4 pl-2 text-gray-700">{{ quiz_form.sub_category.label }}</label>
         <div class="block appearance-none text-gray-500 lg:w-2/3 w-full bg-white">{{quiz_form.sub_category }}</div>
       </p>
+      <p>
+        <label class="block text-gray-700 text-base font-bold pt-4 pl-2 text-gray-700">{{ quiz_form.random_order.label }}</label>
+        <div class="block appearance-none text-gray-500 lg:w-2/3 w-full bg-white">{{quiz_form.random_order }}</div>
+      </p>
     </div>
 
     <div class="tf-form py-8" id="base-tf-form">
