--- a/quiz/templates/quiz/quiz_list.html
+++ b/quiz/templates/quiz/quiz_list.html
@@ -22,7 +22,7 @@
 		{% for quiz in quiz_list %}
 			<div class="lg:w-1/3 w-full p-2">
 					<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
-						<a href="#">
+						<a href="{% url 'take-quiz' url=quiz.url%}">
 							<div class="text-gray-700 text-center truncate">
 								{{ quiz.title }}
 							</div>
