--- a/quiz/templates/quiz/subcategories_dropdown.html
+++ b/quiz/templates/quiz/subcategories_dropdown.html
@@ -1,4 +1,4 @@
 <option value="">---------</option>
-{% for sub_category in sub_categories %}
-  <option value="{{ sub_category.pk }}">{{ sub_category.sub_category }}</option>
+{% for sub in sub_categories %}
+	<option value="{{ sub.id }}">{{ sub.sub_category }}</option>
 {% endfor %}
