--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -2,94 +2,108 @@
 {% load static %}
 
 {% block title %}Mon profil{% endblock %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'quiz/quiz_list.css' %}">
+{% endblock %}
 
 {% block content %}
-<h1>Bienvenue sur votre profil {{ user.username }}</h1>
-
-<p>Vous pourrez retrouver ici toutes informations concernant votre profil telles que les quis auxquels vous avez participés ainsi que ceux que vous avez créées.</p>
-
-<a href="{% url 'create' %}">
-	<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4  rounded">Créer un quiz</button>
-</a>
-
-<ul class="flex border-b">
-	<li class="-mb-px mr-1">
-		<a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#" id='participated'>Quiz passés</a>
-	</li>
-	<li class="mr-1">
-		<a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="#" id='created'>Quiz créés</a>
-	</li>
-</ul>
-
 <div class="container mx-auto">
-	<div id="quiz-participated">
+	<h1 class="py-4">Bienvenue sur votre profil {{ user.username }}</h1>
+
+	<p>Vous pourrez retrouver ici toutes informations concernant votre profil telles que les quis auxquels vous avez participés ainsi que ceux que vous avez créées.</p>
+	<div class="py-8">
+		<a href="{% url 'create' %}">
+			<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Créer un quiz</button>
+		</a>
+	</div>
+
+	<ul class="flex border-b">
+		<li class="-mb-px mr-1">
+			<a class="quizzes bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#" id='participated'>Quiz passés</a>
+		</li>
+		<li class="mr-1">
+			<a class="quizzes bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="#" id='created'>Quiz créés</a>
+		</li>
+	</ul>
+
+
+	<div class="flex content-start flex-wrap pb-16" id="quiz-participated">
+		{% if quiz_participated|length %}
 		{% for quiz in quiz_participated %}
-		<div class="flex content-start flex-wrap bg-gray-200">
-			<div class="w-1/3 p-2">
-				<div class="bg-blue-300 p-2 h-40 rounded-lg">
+		<div class="lg:w-1/3 w-full p-2">
+			<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
+				<a href="{% url 'take-quiz' url=quiz.url%}">
 					<div class="text-gray-700 text-center truncate">
-						<a href="#">{{ quiz.title }}</a>
+						{{ quiz.title }}
 					</div>
-					<div class="flex h-24 justify-center items-end">
+					<div class="flex h-24 justify-center items-end mt-4">
 						{% if quiz.difficulty == 1 %}
-						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-						{% elif quiz.difficulty == 2%}
-						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-						{% elif quiz.difficulty == 3 %}
-						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						{% elif quiz.difficulty == 2 %}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						{% else %}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
 						{% endif %}
 					</div>
-				</div>
+				</a>
 			</div>
-			{% endfor %}
 		</div>
-		<div id="quiz-created">
-			{% for quiz in quiz_created %}
-			<div class="flex content-start flex-wrap bg-gray-200">
-				<div class="w-1/3 p-2">
-					<div class="bg-blue-300 p-2 h-40 rounded-lg">
-						<div class="text-gray-700 text-center truncate">
-							<a href="#">{{ quiz.title }}</a>
-						</div>
-						<div class="flex h-24 justify-center items-end">
-							{% if quiz.difficulty == 1 %}
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-							{% elif quiz.difficulty == 2%}
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-							{% elif quiz.difficulty == 3 %}
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-							{% endif %}
-						</div>
+		{% endfor %}
+		{% else %}
+		<p>Vous n'avez pas encore complété de quiz</p>
+		{% endif %}
+	</div>
+	<div class="flex content-start flex-wrap pb-16" id="quiz-created">
+		{% if quiz_created|length %}
+		{% for quiz in quiz_created %}
+		<div class="lg:w-1/3 w-full p-2">
+			<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
+				<a href="{% url 'take-quiz' url=quiz.url%}">
+					<div class="text-gray-700 text-center truncate">
+						{{ quiz.title }}
 					</div>
-				</div>
-				{% endfor %}
+					<div class="flex h-24 justify-center items-end mt-4">
+						{% if quiz.difficulty == 1 %}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						{% elif quiz.difficulty == 2 %}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						{% else %}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+						{% endif %}
+					</div>
+				</a>
 			</div>
 		</div>
+		{% endfor %}
+		{% else %}
+		<p>Vous n'avez pas encore crée de quiz</p>
+		{% endif %}
+	</div>
+</div>
+<script>
+$("#quiz-created").hide();
 
-		<script>
+$('.quizzes').click( function(e) {
+	e.preventDefault();
+	if (this.id == 'participated') {
+		$("#quiz-participated").show();
 		$("#quiz-created").hide();
+	} else if (this.id == 'created') {
+		$("#quiz-participated").hide();
+		$("#quiz-created").show();
+	}
+	/*your_code_here;*/ 
+	return false; } );
+</script>
 
-		$('a').click( function(e) {
-			e.preventDefault();
-			if (this.id == 'participated') {
-				$("#quiz-participated").show();
-				$("#quiz-created").hide();
-			} else if (this.id == 'created') {
-				$("#quiz-participated").hide();
-				$("#quiz-created").show();
-			}
-			/*your_code_here;*/ 
-			return false; } );
-		</script>
+{% endblock %}
 
-		{% endblock %}
-
-		{% block footer %}
-		{% include 'core/footer.html' %}
-		{% endblock %}
+{% block footer %}
+{% include 'core/footer.html' %}
+{% endblock %}
