--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -31,7 +31,7 @@
 		{% if quiz_participated|length %}
 		{% for quiz in quiz_participated %}
 		<div class="lg:w-1/3 w-full p-2">
-			<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
+			<div class="{{ quiz.category_name }} p-2 h-40 rounded-lg">
 				<a href="{% url 'take-quiz' url=quiz.url%}">
 					<div class="text-gray-700 text-center truncate">
 						{{ quiz.title }}
@@ -60,7 +60,7 @@
 		{% if quiz_created|length %}
 		{% for quiz in quiz_created %}
 		<div class="lg:w-1/3 w-full p-2">
-			<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
+			<div class="{{ quiz.category_name }} p-2 h-40 rounded-lg">
 				<a href="{% url 'take-quiz' url=quiz.url%}">
 					<div class="text-gray-700 text-center truncate">
 						{{ quiz.title }}
