--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -4,10 +4,12 @@
 {% block title %}Mon profil{% endblock %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'quiz/quiz_list.css' %}">
+<link rel="stylesheet" href="{% static 'account/profile.css' %}">
 {% endblock %}
 
 {% block content %}
-<div class="container mx-auto">
+<div class="flex min-h-screen">
+	<div class="container mx-auto flex-grow bg-gray-200 px-8">
 	<h1 class="py-4">Bienvenue sur votre profil {{ user.username }}</h1>
 
 	<p>Vous pourrez retrouver ici toutes informations concernant votre profil telles que les quis auxquels vous avez participés ainsi que ceux que vous avez créées.</p>
@@ -16,18 +18,11 @@
 			<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Créer un quiz</button>
 		</a>
 	</div>
-
-	<ul class="flex border-b">
-		<li class="-mb-px mr-1">
-			<a class="quizzes bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#" id='participated'>Quiz passés</a>
-		</li>
-		<li class="mr-1">
-			<a class="quizzes bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="#" id='created'>Quiz créés</a>
-		</li>
-	</ul>
-
-
-	<div class="flex content-start flex-wrap pb-16" id="quiz-participated">
+	<div class="flex">
+		<a href="" class="quizzes w-1/2 text-center" id="finished">Quiz finis</a>
+		<a href="" class="quizzes w-1/2 text-center" id="created">Quiz crées</a>
+	</div>
+	<div class="flex content-start flex-wrap pb-16 my-8" id="quiz-finished">
 		{% if quiz_participated|length %}
 		{% for quiz in quiz_participated %}
 		<div class="lg:w-1/3 w-full p-2">
@@ -53,10 +48,10 @@
 		</div>
 		{% endfor %}
 		{% else %}
-		<p>Vous n'avez pas encore complété de quiz</p>
+		<p class="py-4 italic text-gray-700">Vous n'avez pas encore complété de quiz</p>
 		{% endif %}
 	</div>
-	<div class="flex content-start flex-wrap pb-16" id="quiz-created">
+	<div class="flex content-start flex-wrap pb-16 my-8" id="quiz-created">
 		{% if quiz_created|length %}
 		{% for quiz in quiz_created %}
 		<div class="lg:w-1/3 w-full p-2">
@@ -82,23 +77,28 @@
 		</div>
 		{% endfor %}
 		{% else %}
-		<p>Vous n'avez pas encore crée de quiz</p>
+		<p class="py-4 italic text-gray-700">Vous n'avez pas encore crée de quiz</p>
 		{% endif %}
 	</div>
 </div>
+</div>
 <script>
 $("#quiz-created").hide();
+$("#finished").css("background-color", "#E8BBA9");
 
 $('.quizzes').click( function(e) {
 	e.preventDefault();
-	if (this.id == 'participated') {
-		$("#quiz-participated").show();
+	if (this.id == 'finished') {
 		$("#quiz-created").hide();
+		$("#created").css("background-color", "transparent");
+		$("#quiz-finished").fadeIn();
+		$("#finished").css("background-color", "#E8BBA9")
 	} else if (this.id == 'created') {
-		$("#quiz-participated").hide();
-		$("#quiz-created").show();
+		$("#quiz-finished").hide();
+		$("#finished").css("background-color", "transparent")
+		$("#quiz-created").fadeIn();
+		$("#created").css("background-color", "#8CD894");
 	}
-	/*your_code_here;*/ 
 	return false; } );
 </script>
 
