--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -33,7 +33,7 @@
     <div class="flex content-start flex-wrap pb-16">
     {% for quiz in quiz_list %}
       <div class="w-1/3 p-2">
-          <div class="{{ quiz.category }} p-2 h-40 rounded-lg">
+          <div class="{{ quiz.category_name }} p-2 h-40 rounded-lg">
             <a href="{% url 'take-quiz' url=quiz.url%}">
               <div class="text-gray-700 text-center truncate">
                 {{ quiz.title }}
