--- a/quiz/templates/quiz/create.html
+++ b/quiz/templates/quiz/create.html
@@ -54,18 +54,21 @@
         <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ tf.difficulty.label }}</label>
         <div class="block appearance-none text-gray-500 lg:w-2/3 w-full bg-white">{{ tf.difficulty }}</div>
       </p>
-      <p>
-        <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ tf.theme1.label }}</label>
-        <div class="shadow appearance-none border rounded lg:w-1/3 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ tf.theme1 }}</div>
-      </p>
-      <p>
-        <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ tf.theme2.label }}</label>
-        <div class="shadow appearance-none border rounded lg:w-1/3 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ tf.theme2 }}</div>
-      </p>
-      <p>
-        <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ tf.theme3.label }}</label>
-        <div class="shadow appearance-none border rounded lg:w-1/3 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ tf.theme3 }}</div>
-      </p>
+      <div class="flex flex-wrap">
+        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+          <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ tf.theme1.label }}</label>
+          <div class="shadow appearance-none border rounded w-56 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ tf.theme1 }}</div>
+        </div>
+        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+          <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ tf.theme2.label }}</label>
+          <div class="shadow appearance-none border rounded w-56 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ tf.theme2 }}</div>
+        </div>
+
+        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+          <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ tf.theme3.label }}</label>
+          <div class="shadow appearance-none border rounded w-56 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ tf.theme3 }}</div>
+        </div>
+      </div>
       <p>
         <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ tf.correct.label }}</label>
         <div class="block appearance-none text-gray-500 lg:w-2/3 w-full bg-white">{{ tf.correct }}</div>
@@ -90,18 +93,22 @@
         <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ mc.difficulty.label }}</label>
         <div class="block appearance-none text-gray-500 lg:w-2/3 w-full bg-white">{{ mc.difficulty }}</div>
       </p>
-      <p>
-        <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ mc.theme1.label }}</label>
-        <div class="shadow appearance-none border rounded lg:w-1/3 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ mc.theme1 }}</div>
-      </p>
-      <p>
-        <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ mc.theme2.label }}</label>
-        <div class="shadow appearance-none border rounded lg:w-1/3 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ mc.theme2 }}</div>
-      </p>
-      <p>
-        <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ mc.theme3.label }}</label>
-        <div class="shadow appearance-none border rounded lg:w-1/3 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ mc.theme3 }}</div>
-      </p>
+      <div class="flex flex-wrap">
+        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+          <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ mc.theme1.label }}</label>
+          <div class="shadow appearance-none border rounded w-56 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ mc.theme1 }}</div>
+        </div>
+        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+          <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ mc.theme2.label }}</label>
+          <div class="shadow appearance-none border rounded w-56 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ mc.theme2 }}</div>
+        </div>
+
+        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+          <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ mc.theme3.label }}</label>
+          <div class="shadow appearance-none border rounded w-56 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ mc.theme3 }}</div>
+        </div>
+      </div>
+      
       <p>
         <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ mc.answer1.label }}</label>
         <div class="shadow appearance-none border rounded lg:w-1/3 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ mc.answer1 }}</div>
