--- a/quiz/templates/quiz/create.html
+++ b/quiz/templates/quiz/create.html
@@ -108,7 +108,7 @@
           <div class="shadow appearance-none border rounded w-56 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ mc.theme3 }}</div>
         </div>
       </div>
-      
+
       <p>
         <label class="block text-gray-700 text-base font-bold pt-4 pl-2">{{ mc.answer1.label }}</label>
         <div class="shadow appearance-none border rounded lg:w-1/3 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">{{ mc.answer1 }}</div>
@@ -142,9 +142,9 @@
       <input type="submit" value="J'ai fini !" class="mybutton text-white font-bold py-2 px-4 rounded-full" id="post-quiz">
     </div>
   </form>
-  <div class="py-2">
-    <button class="mybutton text-white font-bold py-2 px-4 rounded-full" id="add-tf">Ajouter TF</button>
-    <button class="mybutton text-white font-bold py-2 px-4 rounded-full" id="add-mc">Ajouter MC</button>
+  <div class="py-2 pb-32">
+    <button class="mybutton text-white font-bold py-2 px-4 rounded-full" id="add-tf">Ajouter une question Vrai/Faux</button>
+    <button class="mybutton text-white font-bold py-2 px-4 rounded-full" id="add-mc">Ajouter une question à Choix Multiples</button>
   </div>
 </div>
 
