--- a/quiz/templates/quiz/take.html
+++ b/quiz/templates/quiz/take.html
@@ -3,24 +3,40 @@
 {% block title %}Titre du quiz{% endblock %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-<form method="POST">
-	{% csrf_token %}
-	{% for form in forms %}
-		<p>{{ form.1 }}</p> <!--- question's content -->
-		{% if form.0 == 'tf' %}
-			{{ form.2.as_p }} <!-- TF form -->
-		{% else %}
-			<p>
-				<p><label>{{ form.2 }}</label></p>
-				<div>{{ form.5.answer1_correct }}</div>
-				<p><label>{{ form.3 }}</label></p>
-				<div>{{ form.5.answer2_correct }}</div>
-				<p><label>{{ form.4 }}</label></p>
-				<div>{{ form.5.answer3_correct }}</div>
-			</p>
-		{% endif %}
-	{% endfor %}
-	<input type="submit" value="Envoyer">
-</form>
+<div class="flex min-h-screen">
+	<div class="container mx-auto bg-gray-200">
+		<h1 class="text-xl text-gray-800 font-bold py-8 pl-2">{{ title }}</h1>
+		<p class="py-4 mx-2 lg:w-1/2 w-full italic text-gray-700">
+			{{ description}}
+		</p>
+		<form method="POST" class="pl-2">
+			{% csrf_token %}
+			{% for form in forms %}
+			<div class="py-4">
+				<p class="text-gray-800 font-bold">{{ form.1.capitalize }}</p> <!--- question's content -->
+				{% if form.0 == 'tf' %}
+					{{ form.2.as_p }} <!-- TF form -->
+				{% else %} <!-- MC form -->
+					<p>
+						<p><label>{{ form.2 }}</label></p>
+						<div>{{ form.5.answer1_correct }}</div>
+						<p><label>{{ form.3 }}</label></p>
+						<div>{{ form.5.answer2_correct }}</div>
+						<p><label>{{ form.4 }}</label></p>
+						<div>{{ form.5.answer3_correct }}</div>
+					</p>
+				{% endif %}
+			</div>
+			{% endfor %}
+			<div class="pt-4 pb-12">
+				<input type="submit" value="Envoyer" class="rounded-full text-white font-bold bg-blue-500 py-2 px-4">
+			</div>
+		</form>
+	</div>
+</div>
+{% endblock %}
+
+
+{% block footer %}
+{% include 'core/footer.html' %}
 {% endblock %}
