--- a/quiz/templates/quiz/quiz_list.html
+++ b/quiz/templates/quiz/quiz_list.html
@@ -19,29 +19,33 @@
 			{% endfor %}
 		</div>
 		<div class="flex content-start flex-wrap pb-16">
-			{% for quiz in quiz_list %}
-			<div class="lg:w-1/3 w-full p-2">
-				<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
-					<a href="{% url 'take-quiz' url=quiz.url%}">
-						<div class="text-gray-700 text-center truncate">
-							{{ quiz.title }}
-						</div>
-						<div class="flex h-24 justify-center items-end mt-4">
-							{% if quiz.difficulty == 1 %}
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
-							{% elif quiz.difficulty == 2 %}
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
-							{% else %}
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
-							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
-							{% endif %}
-						</div>
-					</a>
+			{% if quiz_list|length %}
+				{% for quiz in quiz_list %}
+				<div class="lg:w-1/3 w-full p-2">
+					<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
+						<a href="{% url 'take-quiz' url=quiz.url%}">
+							<div class="text-gray-700 text-center truncate">
+								{{ quiz.title }}
+							</div>
+							<div class="flex h-24 justify-center items-end mt-4">
+								{% if quiz.difficulty == 1 %}
+								<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+								{% elif quiz.difficulty == 2 %}
+								<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+								<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+								{% else %}
+								<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+								<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+								<img src="{% static "quiz/img/etoile.png" %}" alt="etoile" class="px-1">
+								{% endif %}
+							</div>
+						</a>
+					</div>
 				</div>
-			</div>
-			{% endfor %}
+				{% endfor %}
+			{% else %}
+				<p class="italic py-8 text-gray-700">Aucun quiz n'a été crée pour l'instant</p>
+			{% endif %}
 		</div>
 	</div>
 </div>
