--- a/quiz/templates/quiz/view_quiz_subcategory.html
+++ b/quiz/templates/quiz/view_quiz_subcategory.html
@@ -12,6 +12,7 @@
 		<h1 class="pb-4 pt-8 text-2xl text-gray-700 font-bold">Liste des quiz créés du plus récent au plus ancien :</h1>
 
 		<div class="flex content-start flex-wrap pb-16">
+			{% if quiz_list|length %}
 			{% for quiz in quiz_list %}
 			<div class="lg:w-1/3 w-full p-2">
 				<div class="{{ quiz.category }} p-2 h-40 rounded-lg">
@@ -35,6 +36,9 @@
 				</div>
 			</div>
 			{% endfor %}
+			{% else %}
+				<p class="text-gray-700 p-2 italic">Aucun quiz dans cette sous-catégorie n'a été crée pour le moment</p>
+			{% endif %}
 		</div>
 	</div>
 </div>
