--- a/quiz/templates/quiz/statistics.html
+++ b/quiz/templates/quiz/statistics.html
@@ -10,108 +10,123 @@
 
 {% block content %}
 <div class="flex min-h-screen">
-	<div class="container mx-auto">
-		<div class="">
-		<div class="w-1/3 inline-block px-4">
-			<canvas id="myChart"></canvas>
-		</div>
-		<div class="w-1/3 inline-block px-4">
-			<canvas id="yourChart"></canvas>
-		</div>
-		</div>
+	<div class="container mx-auto text-gray-700">
+		{% if message is not None %}
+			<p class="py-8 italic">{{ message }}</p>
+		{% else %}
+			<p class="py-8">Statistiques du quiz : {{ title }}</p>
+			<p>Nombre de participants : {{ stats.number_participants }}</p>
+			<p>Moyenne des participants : {{ stats.mean }}</p>
+			<p>Facile : {{ stats.easy }}</p>
+			<p>Moyen : {{ stats.medium }}</p>
+			<p>Difficule : {{ stats.difficult }}</p>
+			<br>
+			{% for grade in g_data %}
+				<p>Note : {{ grade }}</p>
+			{% endfor %}
+			<br>
+			{% for theme in t_data %}
+				<p>Theme: {{ theme }}</p>
+			{% endfor %}
+			<br>
+			{% for question in q_data %}
+			<p>Question : {{ question }}</p>
+			{% endfor %}
+		{% endif %}
+	</div>
 	</div>
 </div>
 
-	<script>
-		var ctx = document.getElementById("myChart");
-		var myChart = new Chart(ctx, {
-			type: 'bar',
-			data: {
-				labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-				datasets: [{
-					label: '# of votes',
-					data: {{ d1|safe }},
-					backgroundColor: [
-						'rgba(255, 99, 132, 0.2)',
-						'rgba(54, 162, 235, 0.2)',
-						'rgba(255, 206, 86, 0.2)',
-						'rgba(75, 192, 192, 0.2)',
-						'rgba(153, 102, 255, 0.2)',
-						'rgba(255, 159, 64, 0.2)'
-					],
-					borderColor: [
-						'rgba(255, 99, 132, 1)',
-						'rgba(54, 162, 235, 1)',
-						'rgba(255, 206, 86, 1)',
-						'rgba(75, 192, 192, 1)',
-						'rgba(153, 102, 255, 1)',
-						'rgba(255, 159, 64, 1)'
-					],
-					borderWidth: 1
-				}]
-			},
-			options: {
-				responsive: true,
-				maintainAspectRatio: true,
-				scales: {
-					yAxes: [{
-						ticks: {
-							beginAtZero: true
-						}
-					}]
-				},
-				legend: {
-					labels: {
-						fontSize: 20
-					}
+<script>
+var ctx = document.getElementById("myChart");
+var myChart = new Chart(ctx, {
+	type: 'bar',
+	data: {
+		labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+		datasets: [{
+			label: '# of votes',
+			data: {{ d1|safe }},
+			backgroundColor: [
+			'rgba(255, 99, 132, 0.2)',
+			'rgba(54, 162, 235, 0.2)',
+			'rgba(255, 206, 86, 0.2)',
+			'rgba(75, 192, 192, 0.2)',
+			'rgba(153, 102, 255, 0.2)',
+			'rgba(255, 159, 64, 0.2)'
+			],
+			borderColor: [
+			'rgba(255, 99, 132, 1)',
+			'rgba(54, 162, 235, 1)',
+			'rgba(255, 206, 86, 1)',
+			'rgba(75, 192, 192, 1)',
+			'rgba(153, 102, 255, 1)',
+			'rgba(255, 159, 64, 1)'
+			],
+			borderWidth: 1
+		}]
+	},
+	options: {
+		responsive: true,
+		maintainAspectRatio: true,
+		scales: {
+			yAxes: [{
+				ticks: {
+					beginAtZero: true
 				}
+			}]
+		},
+		legend: {
+			labels: {
+				fontSize: 20
 			}
-		});
+		}
+	}
+});
 
-		var ctx = document.getElementById("yourChart");
-		var yourChart = new Chart(ctx, {
-			type: 'bar',
-			data: {
-				labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-				datasets: [{
-					label: '# of votes',
-					data: {{ d2|safe }},
-					backgroundColor: [
-						'rgba(255, 99, 132, 0.2)',
-						'rgba(54, 162, 235, 0.2)',
-						'rgba(255, 206, 86, 0.2)',
-						'rgba(75, 192, 192, 0.2)',
-						'rgba(153, 102, 255, 0.2)',
-						'rgba(255, 159, 64, 0.2)'
-					],
-					borderColor: [
-						'rgba(255, 99, 132, 1)',
-						'rgba(54, 162, 235, 1)',
-						'rgba(255, 206, 86, 1)',
-						'rgba(75, 192, 192, 1)',
-						'rgba(153, 102, 255, 1)',
-						'rgba(255, 159, 64, 1)'
-					],
-					borderWidth: 1
-				}]
-			},
-			options: {
-				responsive: true,
-				maintainAspectRatio: true,
-				scales: {
-					yAxes: [{
-						ticks: {
-							beginAtZero: true
-						}
-					}]
-				},
-				legend: {
-					labels: {
-						fontSize: 20
-					}
+var ctx = document.getElementById("yourChart");
+var yourChart = new Chart(ctx, {
+	type: 'bar',
+	data: {
+		labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+		datasets: [{
+			label: '# of votes',
+			data: {{ d2|safe }},
+			backgroundColor: [
+			'rgba(255, 99, 132, 0.2)',
+			'rgba(54, 162, 235, 0.2)',
+			'rgba(255, 206, 86, 0.2)',
+			'rgba(75, 192, 192, 0.2)',
+			'rgba(153, 102, 255, 0.2)',
+			'rgba(255, 159, 64, 0.2)'
+			],
+			borderColor: [
+			'rgba(255, 99, 132, 1)',
+			'rgba(54, 162, 235, 1)',
+			'rgba(255, 206, 86, 1)',
+			'rgba(75, 192, 192, 1)',
+			'rgba(153, 102, 255, 1)',
+			'rgba(255, 159, 64, 1)'
+			],
+			borderWidth: 1
+		}]
+	},
+	options: {
+		responsive: true,
+		maintainAspectRatio: true,
+		scales: {
+			yAxes: [{
+				ticks: {
+					beginAtZero: true
 				}
+			}]
+		},
+		legend: {
+			labels: {
+				fontSize: 20
 			}
-		});
+		}
+	}
+});
 	</script>
 {% endblock %}
 
