--- a/quiz/templates/quiz/take.html
+++ b/quiz/templates/quiz/take.html
@@ -12,7 +12,7 @@
 		<form method="POST" class="pl-2">
 			{% csrf_token %}
 			{% for form in forms %}
-			<div class="py-4">
+			<div class="py-4 text-gray-700">
 				<p class="text-gray-800 font-bold">{{ form.1.capitalize }}</p> <!--- question's content -->
 				{% if form.0 == 'tf' %}
 					{{ form.2.as_p }} <!-- TF form -->
