created pages contact and license

--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,4 +1,4 @@
  <footer class="footer flex justify-evenly -mx-16 py-8">
-      <a class="px-16 no-underline font-bold italic text-gray-900 hover:text-green-900" href="#">Mentions Légales</a>
-      <a class="px-16 no-underline font-bold italic text-gray-900 hover:text-green-900" href="#">Licence</a>
+      <a class="px-16 no-underline font-bold italic text-gray-900 hover:text-green-900" href="{% url 'contact' %}" id="contact">Contact</a>
+      <a class="px-16 no-underline font-bold italic text-gray-900 hover:text-green-900" href="{% url 'license' %}" id="licence">Licence</a>
   </footer>
