--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -10,7 +10,7 @@
         {% csrf_token %}
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2" for="{{ form.username.id_for_label }}">Nom d'utilisateur :</label>
-          <div class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+          <div class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username">
             {{ form.username }}
           </div>
         </div>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="flex items-center justify-between">
-          <input type="submit" value="S'inscrire" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+          <input type="submit" value="S'inscrire" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" id="register">
         </div>
 
       </form>
